web/app/themes/teamjb/assets/styles/main.scss
@import "common/_settings.scss";

//@import url(http://fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans:400italic,700italic,400,700);
@import url(http://fonts.googleapis.com/css?family=Lato:100,300,regular,700,900|Open+Sans:300|Indie+Flower:regular|Oswald:300,regular,700&subset=latin,latin-ext);
@import url(http://fonts.googleapis.com/css?family=Bentham|Pinyon+Script|Bitter:400,700|Raleway:300,400,500,600|Sacramento|Lato:300,400,900|Open+Sans:400,700,800|Pacifico|Lobster|Roboto:400,900,700|Oswald:400,700&ver=4.0.1);

// Automatically injected Bower dependencies via wiredep (never manually edit this block)
// bower:scss
@import "../../bower_components/foundation/scss/foundation/components/_accordion.scss";
@import "../../bower_components/foundation/scss/foundation/components/_alert-boxes.scss";
@import "../../bower_components/foundation/scss/foundation/components/_block-grid.scss";
@import "../../bower_components/foundation/scss/foundation/components/_breadcrumbs.scss";
@import "../../bower_components/foundation/scss/foundation/components/_button-groups.scss";
@import "../../bower_components/foundation/scss/foundation/components/_buttons.scss";
@import "../../bower_components/foundation/scss/foundation/components/_clearing.scss";
@import "../../bower_components/foundation/scss/foundation/components/_dropdown-buttons.scss";
@import "../../bower_components/foundation/scss/foundation/components/_dropdown.scss";
@import "../../bower_components/foundation/scss/foundation/components/_flex-video.scss";
@import "../../bower_components/foundation/scss/foundation/components/_forms.scss";
@import "../../bower_components/foundation/scss/foundation/components/_global.scss";
@import "../../bower_components/foundation/scss/foundation/components/_grid.scss";
@import "../../bower_components/foundation/scss/foundation/components/_icon-bar.scss";
@import "../../bower_components/foundation/scss/foundation/components/_inline-lists.scss";
@import "../../bower_components/foundation/scss/foundation/components/_joyride.scss";
@import "../../bower_components/foundation/scss/foundation/components/_keystrokes.scss";
@import "../../bower_components/foundation/scss/foundation/components/_labels.scss";
@import "../../bower_components/foundation/scss/foundation/components/_magellan.scss";
@import "../../bower_components/foundation/scss/foundation/components/_offcanvas.scss";
@import "../../bower_components/foundation/scss/foundation/components/_orbit.scss";
@import "../../bower_components/foundation/scss/foundation/components/_pagination.scss";
@import "../../bower_components/foundation/scss/foundation/components/_panels.scss";
@import "../../bower_components/foundation/scss/foundation/components/_pricing-tables.scss";
@import "../../bower_components/foundation/scss/foundation/components/_progress-bars.scss";
@import "../../bower_components/foundation/scss/foundation/components/_range-slider.scss";
@import "../../bower_components/foundation/scss/foundation/components/_reveal.scss";
@import "../../bower_components/foundation/scss/foundation/components/_side-nav.scss";
@import "../../bower_components/foundation/scss/foundation/components/_split-buttons.scss";
@import "../../bower_components/foundation/scss/foundation/components/_sub-nav.scss";
@import "../../bower_components/foundation/scss/foundation/components/_switches.scss";
@import "../../bower_components/foundation/scss/foundation/components/_tables.scss";
@import "../../bower_components/foundation/scss/foundation/components/_tabs.scss";
@import "../../bower_components/foundation/scss/foundation/components/_thumbs.scss";
@import "../../bower_components/foundation/scss/foundation/components/_tooltips.scss";
@import "../../bower_components/foundation/scss/foundation/components/_top-bar.scss";
@import "../../bower_components/foundation/scss/foundation/components/_type.scss";
@import "../../bower_components/foundation/scss/foundation/components/_visibility.scss";
@import "../../bower_components/layerslider/css/_layerslider.scss";
// endbower

@import "common/_variables";
@import "common/_global";
@import "components/_plugins";
@import "components/_public";
@import "components/_buttons";
@import "components/_comments";
@import "components/_forms";
@import "components/_grid";
@import "components/_wp-classes";
@import "components/_superfish";
@import "components/_flexslider";
@import "components/_colorbox";
@import "components/_prettyPhoto";
@import "components/_custom";
@import "components/_perfectScrollbar";
@import "layouts/_header";
@import "layouts/_sidebar";
@import "layouts/_footer";
@import "layouts/_pages";
@import "layouts/_posts";


/* CUSTOM TEAM JB THEME STYLES */

//.jb-container { position:relative; margin:0px auto; padding:0px; width: 100%; height: 400px; overflow: auto; }
//.jb-container .jb-content { width: 100%; height: 720px; }
// .always-visible.ps-container > .ps-scrollbar-x-rail,
//      .always-visible.ps-container > .ps-scrollbar-y-rail {
//        opacity: 0.6;
//      }
	  

/* Colors & Accents */
.coll-button.coll-accent-color:hover, .coll-post-info .categories a:hover, .coll-single .navigation-container .arrow:hover .fa, .coll-single .title-wrapper .icons .link:hover, .coll-single.lightbox, .comment-reply-link:hover
{ border-color:$color-teamjb-honeygold; }

.coll-button:hover,
.coll-single .title-wrapper .icons .link:hover { border-color:$color-teamjb-honeygold; background:$color-teamjb-honeygold !important; }
	/* Prev/Next Nav */
	.coll-single .navigation-container .arrow:hover>div.info>.title-text, .coll-single .navigation-container .arrow:hover>div.info>label { color:$color-teamjb-honeygold !important; }
	.coll-single .navigation-container .arrow:hover .fa { background-color:$color-teamjb-honeygold !important; }

/* Home Page Flex-Slider */
.flexslider { border:none; -webkit-box-shadow: none; box-shadow:none; }

/* Home Page Hero Text */
#home-hero-text h1, 
#home-hero-text p { text-shadow: 0px 0px 20px rgba(0, 0, 0, 1); }

#home-hero-text p { font-size:20px; color:#ffffff; }


/* Blog */
.coll-post-list article.hentry .asset { text-align:center; margin-top:20px; float:left; margin:0 15px 15px 0; }
.coll-post-list article.hentry .asset>a>img { width:auto; }

/* Team Profile and Case Study Modal Window */
.TJB-small-title { text-transform:uppercase; font-weight:normal; font-size:18px; }
.TJB-bio-wrapper { margin-bottom:30px !important; }
.TJB-border-title { border-bottom:1px solid; padding-bottom:10px; margin-bottom:25px; }
.overlay_text h5 { display:none; }


/* homepage logo animation tweaks */
.ls-text-layer-one { top:125px !important; }
.ls-text-layer-two { top:0px; }
.ls-logo-layer { top:50px; }

/* 																  *\
	Styles to account for various mobile/tablet responsive things  
\*																  */



/* Page header tweaks */
#change-weather-line-one { color: #eee; border-color: rgb(0, 0, 0); font-size: 50px; margin-bottom:30px; }
#change-weather-line-two { color: #eee; border-color: rgb(0, 0, 0); font-size: 90px; }
#look-who-is-talking-header-text-box { vertical-align:top; padding-top:200px; }
#team-jb-blog-header-text-box { vertical-align:top; padding-top:300px; }


div.mfp-wrap.mfp-auto-cursor.mfp-ready > button { top:31px; }


/* Portrait/Landscape Variables */
$portraiture : "(orientation: portrait)" !default;
$landscaping : "(orientation: landscape)" !default;

/* Portrait */
@media only screen and #{$portraiture} {
	
}

/* Landscape */
@media only screen and #{$landscaping} {
	
}

/* XLarge and up */
@media #{$xlarge-up} { 
	/* Meet The Team Page tweaks */
	.mini-bio { /* font-size: NUMBERpx; */ }
	
}

/* medium and up */
@media #{$medium-up} { 
	/* Case Studies */
	#case-study-oxy-express .entry-content { padding-top:120px; }
	
}

/* medium Portrait */
@media #{$medium-only} and #{$portraiture} { 
	
	/* page header tweaks */
	#change-weather-line-one { font-size: 40px; }
	#change-weather-line-two { font-size: 65px; }

}

/* medium Landscape */
@media #{$medium-only} and #{$landscaping} { 
	
	/* page header tweaks */
	#change-weather-line-one { font-size: 40px; }
	#change-weather-line-two { font-size: 55px; }
	
	

}

/* all small */
@media #{$small-only} {

	#home-is-everything,
	#home-relationship { text-shadow: 1px 0px 2px rgba(0, 0, 0, 1); }
}
/* small Portrait */
@media #{$small-only} and #{$portraiture} { 

	/* homepage logo animation tweaks */
	#home-animated-logo { width:300px !important; }
	#home-relationship { font-size:.75em !important; }
	.ls-text-layer-one { top:75px !important; }
	.ls-text-layer span { text-shadow: 1px 0px 2px rgba(0, 0, 0, 1); }
	
	/* page header tweaks */
	#change-weather-line-one { font-size: 35px; padding:0 10px;}
    #change-weather-line-two { font-size: 45px; }
	.look-who-is-talking-line-two { padding:0 10px; }
	
	/* team JB blog */
	#team-jb-blog-header-text-box { padding-top:234px; }
	#team-jb-blog-header-text-box .type-02 .text { font-size:29px; }
	
	
	/* homepage hero text */
	#home-hero-text p { font-size:15px; text-shadow: 1px 0px 2px rgba(255, 255, 255, 1); }
	
	
	/* Footer Tweaks */
	.site-footer .bottom { padding-top:20px; margin-top:10px; }
	.site-footer .nav > li { display:block; padding:5px 0; }
	.site-footer .nav > .menu-item > a{ font-size:14px; }
	.site-footer .logo img { width:290px; }
	
}

/* small Landscape */
@media #{$small-only} and #{$landscaping} { 
	
	/* homepage logo animation tweaks */
	#layerslider_8 { position:relative; top:-50px; }
	
	.ls-logo-layer { }
	.ls-text-layer-one { top:75px !important; }
	
	/* homepage hero text */
	#home-hero-text h1 { font-size:30px; }
	#home-hero-text p { font-size:15px !important; text-shadow: 1px 0px 2px rgba(255, 255, 255, 1); }
 	
	/* page header tweaks */
	#change-weather-line-one { font-size: 20px; margin-top:20px; }
	#change-weather-line-two { font-size: 50px; }
	#look-who-is-talking-header-text-box { padding-top:100px; }
	#team-jb-blog-header-text-box { padding-top: 100px; }
	
	/* Team Profile: hide the background photos because the image ratio jacks them up  */
	#jon-bio .show-for-small-only,
	#travis-bio .show-for-small-only,
	#melanie-bio .show-for-small-only,
	#darrick-bio .show-for-small-only,
	#cheryl-bio .show-for-small-only { display:none !important;}

	/* hide the mini bio paragraph because it gets cut off */
	.mini-bio { display:none; }
	
	/* Footer Tweaks */
	.site-footer .bottom { padding-top:20px; margin-top:10px; }
	.site-footer .nav > li { display:block; padding:5px 0; margin-right:0px; }
	.site-footer .nav > .menu-item > a{ font-size:14px; }
	.site-footer .logo img { width:290px; }
}   


/*Just for iphone 6 landscape */
@media only screen and (min-device-width : 375px) and (max-device-width : 667px) and (orientation : landscape) { 
 	/* hide the mini bio paragraph because it gets cut off */
	.mini-bio { display:none; }
	
	#home-hero-text { width:100% !important; }
	#home-hero-text h1 { padding-top:10px; }
	#home-hero-text p {  }
	#home-hero-text .hide-for-small-only { display:none; }
	
	#home-is-everything,
	#home-relationship { text-shadow: 1px 0px 2px rgba(0, 0, 0, 1); }
}

@media only screen and (min-device-width : 414px) and (max-device-width : 736px) and (orientation : landscape) { 
 	/* hide the mini bio paragraph because it gets cut off */
	.mini-bio { display:none; }
}

